#1847 fix alignment ember logos, #1848 add links to ember logos, #1849 add ember js background video, #1850 fix link on erlang teaser, #1851 remove test eurorust calendar, #1852 sort talks by descending

--- a/src/assets/css/components/_footer.scss
+++ b/src/assets/css/components/_footer.scss
@@ -25,6 +25,7 @@
   margin-top: 3.5rem;
   color: var(--color-white);
   justify-content: flex-start;
+  gap: 1rem;
 
   .social__link:hover {
     color: var(--color-aqua);
